M       vbm_vol_median3.mexw32
M       vbm_vol_median3.mexw64
M       vbm_vol_median3c.mexmaci64
M       vbm_vol_median3c.mexw32
M       vbm_vol_median3c.mexw64
M       vbm_vol_pbtp.mexmaci64
M       vbm_vol_pbtp.mexw32
M       vbm_vol_pbtp.mexw64
M       vbm_vol_simgrow.mexglx
M       vbm_vol_simgrow.mexmaci64
M       vbm_vol_simgrow.mexw32
M       vbm_vol_simgrow.mexw64

(1) SANLM-Filter had issues in white matter because of error in NAN.
(2) Recompiled all mex-files.

------------------------------------------------------------------------
r612 | gaser | 2014-09-24 17:17:01

M       CHANGES.txt
D       avgT1_Dartel_IXI550_MNI152.nii
M       cg_vbm_write.m

(1)  Removed 3rd noise correction after LAS.
(2)  Corrected intensity normalization error in 7T data. 
(3)  Removed old average T1 IXI image in VBM main directory. 
     A new average T1 can be found in the "template_1.50mm" directory. 
------------------------------------------------------------------------
r613 | dahnke | 2014-09-24 18:21:36

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_stat_marks.m

(1)  Corrected QA execution error. 


------------------------------------------------------------------------
r614 | dahnke | 2014-09-25 01:09:08

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_tst_pre.m

(1)  Corrected error in LAS class correction that cause problems with the WMHC.
------------------------------------------------------------------------
r615 | dahnke | 2014-09-25 13:51:10

M       CHANGES.txt
M       Makefile.vbm
M       cg_vbm_write.m
M       compile.m
M       tbx_cfg_vbm.m
M       vbm12.man
M       vbm_io_cmd.m
M       vbm_surf_createCS.m

(1) Corrected output of processing time in cg_vbm_write.m and 
    vbm_surf_createCS.m.
(2) Some minor modication to GUI-text.
(3) Modified compile tool.
(4) Handling of exlusively saving jacobian was not correct.


------------------------------------------------------------------------
r616 | gaser | 2014-09-29 11:20:33