@@ -1390,10 +1390,16 @@ if do_cls && vbm.print
   str = [str struct('name', 'Dartel Template:','value',spm_str_manip(vbm.darteltpm,'k40d'))];
 	str = [str struct('name', 'Affine regularization:','value',sprintf('%s',vbm.affreg))];
 	str = [str struct('name', 'Bias FWHM / Bias reg.:','value',sprintf('%d / %0.08f',job.opts.biasfwhm,job.opts.biasreg))];
-  str = [str struct('name', 'Noise reduction:','value',...
+  if vbm.sanlm>2
+    str = [str struct('name', 'Noise reduction:','value',...
            sprintf('%s%s%sMRF(%0.2f)',spm_str_manip('SANLM +',sprintf('f%d',7*(vbm.sanlm>0))),...
            spm_str_manip(sprintf(' ORNLM(%0.2f) +',ornlmstr),sprintf('f%d',14*(vbm.sanlm>2))),...
            ' '.*(vbm.sanlm>0),job.extopts.mrf))];
+  else
+    str = [str struct('name', 'Noise reduction:','value',...
+           sprintf('%s%s%sMRF(%0.2f)',spm_str_manip('SANLM +',sprintf('f%d',7*(vbm.sanlm>0))),...
+           ' '.*(vbm.sanlm>0),job.extopts.mrf))];
+  end
   str = [str struct('name', 'LASstr / gcutstr / cleanupstr:','value',sprintf('%0.2f / %0.2f / %0.2f',...
          job.extopts.LASstr,job.extopts.gcutstr,job.extopts.cleanupstr))]; 
   str = [str struct('name', 'Norm. voxel size:','value',sprintf('%0.2f mm',job.extopts.vox))]; 
